src/yini_test/cases/golden/strict/valid/sections/section-marker-separator-underscore.strict.yini
@yini strict

^ Root
name = "strict-marker-separator-underscore"

^_^ Child
enabled = true

/END
