src/yini_test/cases/golden/strict/invalid/sections/section-skip-level-via-shorthand.strict.yini
@yini strict

^1 Root
name = "root"

^9 Skipped
value = true

/END
